--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -32,28 +32,51 @@ body {
   margin-left: 1rem;
 }
 
-.main-nav ul {
+.main-nav ul,
+.footer-nav ul {
   display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.main-nav a {
+.main-nav a,
+.footer-nav a {
   color: inherit;
   text-decoration: none;
   padding: 1rem;
 }
 
-.main-nav a:hover {
+.main-nav a:hover,
+.footer-nav a:hover {
   color: #adadad;
 }
 
-.main-header {
+.main-header,
+.main-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 140px;
+}
+
+.main-header {
+  height: 140px;
+}
+
+.social-link img {
+  width: 1em;
+  margin-right: 0.25rem;
+}
+
+.main-footer {
+  height: 70px;
+  background-color: #202027;
+}
+
+.main-footer .container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .container {
@@ -78,9 +101,28 @@ body {
 
 .btn {
   color: white;
-  background-color: #1762A7;
-  padding: .75rem 1.5rem;
-  border-radius: .5rem;
+  background-color: #1762a7;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
   text-decoration: none;
-  font-size: .9rem;
+  font-size: 0.9rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #2180d8;
+}
+
+.btn:focus {
+  background-color: #2796ff;
+}
+
+@media screen and (max-width: 656px) {
+  .main-nav a,
+  .footer-nav a {
+    padding: 8px;
+    font-size: 12px;
+  }
 }
